# any-guardrail

./: .codespellrc  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  README copy.md  README.md  SUMMARY.md  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  prompts.md  pyproject.toml
.github/workflows/: docs.yaml  lint.yaml  pre-commit-update.yaml  release.yaml  tests-docs.yaml  tests-integration.yaml  tests-unit.yaml
api/: any_guardrail.md  types.md
api/any_guardrail/: index.html
api/guardrail_factory/: index.html
api/guardrails/: alinia.md  any-llm.md  azure-content-safety.md  azure-prompt-shields.md  bedrock-guardrails.md  bielik-guard.md  compass-judger.md  deepset.md  duo-guard.md  dyna-guard.md  flowjudge.md  gli-guard.md  gli-ner-pii.md  glider.md  gpt-oss-safeguard.md  granite-guardian.md  harm-guard.md  index.html  index.md  injec-guard.md  jasper.md  kanana-safeguard.md  lakera-guard.md  lettuce-detect.md  llama-guard.md  nemotron-content-safety.md  off-topic.md  openai-moderation.md  pangolin.md  patronus.md  poly-guard.md  prometheus.md  prompt-guard.md  protectai.md  qwen3-guard-stream.md  qwen3-guard.md  selene.md  sentinel.md  shield-gemma.md  watsonx-guardian.md  (+1 more)
api/providers/: encoderfile.md  llamafile.md
benchmarks/: README.md  __init__.py  guardbench_adapter.py  operational.py  runners.py
cookbook/: alinia_guardrail_usage.md  any_llm_as_a_guardrail.md  azure_blocklist_slang_filter.md  azure_prompt_shields_guardrail.md  customer_service_policy_guardrail.md  encoderfile_guardrail.md  fetching_prompts_and_content.md  lakera_guard_guardrail.md  llamafile_granite_guardian.md  openai_moderation_guardrail.md
cookbook/alinia_guardrail_usage/: index.html
cookbook/any_llm_as_a_guardrail/: index.html
cookbook/azure_blocklist_slang_filter/: index.html
cookbook/customer_service_policy_guardrail/: index.html
docs/: SUMMARY.md  benchmarks.md  index.md  prompt_catalog.md  prompts.md  providers.md  quickstart.md
docs/api/: any_guardrail.md  guardrail_facotry.md  guardrail_factory.md  guardrails.md  taxonomy.md  types.md
docs/cookbook/: alinia_guardrail_usage.ipynb  any_llm_as_a_guardrail.ipynb  azure_blocklist_slang_filter.ipynb  azure_prompt_shields_guardrail.ipynb  customer_service_policy_guardrail.ipynb  encoderfile_guardrail.ipynb  fetching_prompts_and_content.ipynb  lakera_guard_guardrail.ipynb  llamafile_granite_guardian.ipynb  openai_moderation_guardrail.ipynb
examples/: Testing.ipynb
experiments/: Experiment_Scratch.ipynb  Function_Calling_Experiment.ipynb  Playing.ipynb
quickstart/: index.html
schemas/: guardrail_benchmarks.schema.json  guardrail_content.json  guardrail_metadata.json  guardrail_output.schema.json  guardrail_parameters.json  guardrail_prompts.json
scripts/: convert_to_gitbook.py  generate_api_docs.py  generate_benchmark_schema.py  generate_benchmarks_json.py  generate_content_data.py  generate_content_json.py  generate_cookbooks.py  generate_json_schema.py  generate_metadata_json.py  generate_parameter_data.py  generate_parameters_json.py  generate_prompt_catalog.py  generate_prompts_json.py  generate_summary.py  hooks.py  verify_granite_guardian.py
search/: search_index.json
src/any_guardrail/: __init__.py  _authored_content_data.py  _authored_prompt_data.py  _benchmark_data.py  _flowjudge_default_prompt.py  _parameter_data.py  api.py  base.py  benchmark_registry.py  benchmarks.py  call_guardrail.py  content.py  content_registry.py  guardrail.py  instantiate_guardrail.py  parameter_registry.py  parameters.py  prompt_registry.py  prompts.py  registry.py  taxonomy.py  types.py
tests/docs/: test_all.py
tests/integration/: conftest.py  test_alinia.py  test_any_llm_guardrail.py  test_azure_content_safety.py  test_azure_prompt_shields.py  test_bedrock_guardrails.py  test_encoderfile.py  test_gli_guard.py  test_gli_ner_pii.py  test_granite_guardian.py  test_guardrail_integration.py  test_huggingface_guardrails.py  test_lakera_guard.py  test_lettuce_detect.py  test_llamafile.py  test_openai_moderation.py  test_patronus.py  test_pioneer.py  test_qualifire.py  test_watsonx_guardian.py
tests/unit/: test_api.py  test_benchmarks.py  test_call_guardrail.py  test_content.py  test_custom_types.py  test_error_handling.py  test_generate_cookbooks.py  test_guardrail_base.py  test_guardrails.py  (+35 more)
(+188 files in other folders)
